### [Unreleased]
#### Added
#### Changed
- Clearly list features in `readme.txt` description
#### Deprecated
#### Removed
#### Fixed
#### Security

### [0.4.0] - 2021-04-20
#### Added
- Show events' location if set: `description` and `locality` fields
- Plugin icon
#### Changed
- Update dev dependencies eslint, jsdom, webpack

### [0.3.0] - 2021-04-05
#### Added
- Donation link to WordPress Plugin Directory sidebar and to `package.json`
- Cache requests for 2 minutes
- Set up ESLint static code analysis
#### Changed
- Update luxon dependency
- Update dev dependencies jsdom, webpack, webpack-cli

### [0.2.2] - 2021-03-10
#### Changed
- Confirm compatibility with WordPress 5.7
- Update graphql dependency
- Update dev dependencies jsdom, webpack, webpack-cli, webpack-stream

### [0.2.1] - 2021-01-15
#### Fixed
- Add missing backtick to `readme.txt`

### [0.2.0] - 2021-01-15
#### Added
- `changelog.txt`
- Changelog maintenance steps to `README.md`
- Link to Github repository in `readme.txt`
- Option to show events of a specific group by indicating its name
#### Changed
- Use same Markdown style in `README.md` as in other documents

### [0.1.0] - 2021-01-09
initial release