@@ -5,6 +5,7 @@ import { createAnchorElement } from './html-creator'
 const NAME = '<wordpress-name>'
 
 function displayEvents(data, list) {
+  const locale = list.getAttribute('data-locale')
   const maxEventsCount = list.getAttribute('data-maximum')
   const events = data.events ? data.events.elements : data.group.organizedEvents.elements
   const eventsCount = Math.min(maxEventsCount, events.length)
@@ -17,7 +18,7 @@ function displayEvents(data, list) {
     const br = document.createElement('br')
     li.appendChild(br)
 
-    const date = Formatter.formatDate({ start: events[i].beginsOn, end: events[i].endsOn })
+    const date = Formatter.formatDate({ locale, start: events[i].beginsOn, end: events[i].endsOn })
     const textnode = document.createTextNode(date)
     li.appendChild(textnode)
 
