@@ -6,6 +6,7 @@ if (!defined('ABSPATH')) {
 ?>
 <ul class="<?php echo esc_attr($classNamePrefix); ?>_events-list"
   data-url="<?php echo esc_attr($url); ?>"
+  data-locale="<?php echo esc_attr($locale); ?>"
   data-maximum="<?php echo esc_attr($eventsCount); ?>"
   data-group-name="<?php echo esc_attr($groupName); ?>">
   <li style="display: none;"><?php echo esc_html_e('The events could not be loaded!', $textDomain); ?></li>
